--- a/hata/sass/fonts.sass
+++ b/hata/sass/fonts.sass
@@ -1,4 +1,13 @@
 @font-face
+    font-family: "HelveticaNeueCyr"
+    src: url(../fonts/HelveticaNeueCyr-Roman.ttf) format("truetype")
+    src: url(../fonts/HelveticaNeueCyr-Roman.woff) format("woff")
+    src: url(../fonts/HelveticaNeueCyr-Roman.woff2) format("woff2")
+    font-display: swap
+    font-weight: 400
+    font-style: normal
+
+@font-face
     font-family: "SF Pro Display"
     src: url(../fonts/SFProDisplay-Regular.ttf) format("truetype")
     src: url(../fonts/SFProDisplay-Regular.woff) format("woff")
@@ -8,12 +17,12 @@
     font-style: normal
 
 @font-face
-    font-family: "HelveticaNeueCyr"
-    src: url(../fonts/HelveticaNeueCyr-Roman.ttf) format("truetype")
-    src: url(../fonts/HelveticaNeueCyr-Roman.woff) format("woff")
-    src: url(../fonts/HelveticaNeueCyr-Roman.woff2) format("woff2")
+    font-family: "SF Pro Display"
+    src: url(../fonts/SFProDisplay-Medium.ttf) format("truetype")
+    src: url(../fonts/SFProDisplay-Medium.woff) format("woff")
+    src: url(../fonts/SFProDisplay-Medium.woff2) format("woff2")
     font-display: swap
-    font-weight: 400
+    font-weight: 500
     font-style: normal
 
 @font-face
