--- a/hata/sass/media.sass
+++ b/hata/sass/media.sass
@@ -1,1 +1,150 @@
- 
+@media screen and ( max-width: 1140px )
+    .picset
+        &__tile
+            grid-template-rows: repeat(2, 100px)
+    .tab
+        &__label
+            margin-bottom: 8px
+        &__checkbox + &__label
+            margin-bottom: 0
+        &__form
+            display: grid
+            grid-template-columns: repeat(3, 1fr)
+            justify-content: center
+            grid-gap: 10px
+        &__col
+            &:nth-child(1)
+                order: 4
+            &:nth-child(2)
+                order: 0
+            &:nth-child(3)
+                order: 5
+            &:nth-child(4)
+                order: 2
+            &:nth-child(5)
+                order: 3
+            &:nth-child(6)
+                order: 6
+                
+@media screen and ( max-width: 840px )
+    .top
+        .col-container
+            &_three
+                grid-template-columns: repeat(2, minmax(200px, 340px))
+                justify-content: center
+                grid-gap: 32px
+
+    .scroll
+        bottom: 20px
+        right: 20px
+
+    .picset
+        &__tile
+            grid-template-rows: repeat(2, 80px)
+
+    .tab
+        &__form
+            grid-column-gap: 30px
+            grid-row-gap: 10px
+            grid-template-columns: 230px repeat(2, 1fr)
+
+@media screen and ( max-width: 760px )
+    .tab
+        &__label
+            white-space: normal
+        &__checkbox
+            flex-shrink: 0
+            margin-top: 8px
+
+
+@media screen and ( max-width: 720px )
+    .dropdown
+        padding: 5px
+    .header
+        &__content
+            display: none
+    .burger
+        display: inline-block
+    .main
+        margin-top: 110px
+
+@media screen and ( max-width: 680px )
+    .tab
+        &__form
+            grid-template-columns: repeat(2, 1fr)
+        &__checkbox
+            margin-top: 0
+        &__compare
+            margin-bottom: 12px
+        &__col
+            &:nth-child(1)
+                order: 0
+            &:nth-child(2)
+                order: 1
+            &:nth-child(3)
+                order: 4
+            &:nth-child(4)
+                order: 2
+            &:nth-child(5)
+                order: 5
+            &:nth-child(6)
+                order: 6
+
+@media screen and ( max-width: 620px )
+    .tab
+        &__form
+            grid-row-gap: 20px
+            grid-template-columns: 1fr
+    .nav
+        &__list
+            padding: 0
+        &__item
+            &:first-child
+                margin-left: 0
+            &:last-child
+                margin-right: 0
+    .hero
+        &__body
+            padding-top: 50px
+            padding-bottom: 520px
+    .types
+        display: none
+
+@media screen and ( max-width: 490px )
+    .top
+        .col-container
+            &_three
+                grid-template-columns: repeat(1, 1fr)
+                justify-content: center
+                grid-gap: 32px
+
+    .picset
+        &__tile
+            grid-template-rows: repeat(2, 130px)
+
+    .header
+        &__wrap
+            padding: 4px 0px
+    .nav
+        display: none
+    .main
+        margin-top: 60px
+
+@media screen and ( max-width: 390px )
+    .scroll
+        height: 40px
+        width: 40px
+        bottom: 10px
+        right: 10px
+
+    .tab
+        padding: 40px 25px
+
+    .picset
+        &__tile
+            grid-template-rows: repeat(2, 110px)
+
+@media screen and ( max-width: 350px )
+    .picset
+        &__tile
+            grid-template-rows: repeat(2, 90px)
