--- a/hata/sass/style.sass
+++ b/hata/sass/style.sass
@@ -250,7 +250,8 @@ section
         align-items: center
         justify-content: space-between
         width: 100%
-        max-width: 910px
+        max-width: 1010px
+        padding: 0px 50px
         margin: 0 auto
     &__item
         list-style-type: none
@@ -334,11 +335,64 @@ section
             visibility: visible
             pointer-events: all
 
+.burger
+    display: none
+    background-color: transparent
+    height: 40px
+    width: 40px
+    background-color: #F1F3F6
+    cursor: pointer
+    border-radius: 4px
+    position: relative
+    margin-left: 10px
+    flex-shrink: 0
+    span, &::before, &::after
+        opacity: 0.8
+        content: ''
+        height: 2px
+        border-radius: 2px
+        background-color: $main_black
+        display: inline-block
+        position: absolute
+        left: 10px
+        transform: translate(0%, )
+        transition: top .25s ease-in-out .4s, transform .25s ease-in-out 0s, opacity 0s ease-in-out .25s, left .1s ease-in-out .25s, width .25s ease-in-out .3s
+    &::before
+        width: 18px
+        top: 12px
+        transform: translate(0%, -50%)
+        transform-origin: right
+    span
+        width: 15px
+        top: 19px
+        transform: translate(0%, -50%)
+        transform-origin: left
+    &::after
+        width: 10px
+        top: 27px
+        transform: translate(0%, -50%)
+    &:focus
+        outline: none
+    &.active
+        &::before, &::after, span
+            transition: top .25s ease-in-out 0s, transform .25s ease-in-out .3s, opacity 0s ease-in-out .3s, left .25s ease-in-out .25s, width .25s ease-in-out .3s
+            top: 10px
+        &::before
+            width: 27px
+            transform: translate(-7px, -50%) rotate(-45deg)
+        span
+            transform: translate(0, -50%) rotate(45deg)
+            left: 10px
+            width: 20px
+        &::after
+            opacity: 0
+
 .main
     flex-grow: 1
     margin-top: 120px
 
 .hero
+    background-color: #000000
     &__overlay
         position: absolute
         width: 100%
@@ -349,7 +403,7 @@ section
         width: 100%
         height: 100%
         opacity: 0
-        transform: scale(0.8)
+        transform: scale(1.1)
         &.active
             opacity: 1
             transform: scale(1)
@@ -434,9 +488,6 @@ section
         color: #000
         display: inline-block
         margin-bottom: 12px
-    &__col
-        & + &
-            margin-left: 32px
     &__row
         .tab__check + .tab__check
             margin-left: 8px
@@ -553,7 +604,7 @@ section
         width: 100%
         display: grid
         grid-template-columns: repeat(3, 1fr)
-        grid-template-rows: 124px 124px
+        grid-template-rows: repeat(2, 124px)
         grid-row-gap: 8px
         grid-column-gap: 8px
     &__description
@@ -1592,4 +1643,3 @@ section
         display: block
         pointer-events: all
         visibility: visible
-
