--- a/hata/sass/style.sass
+++ b/hata/sass/style.sass
@@ -387,6 +387,45 @@ section
         &::after
             opacity: 0
 
+.menu
+    position: fixed
+    padding: 145px 15px 10px
+    top: 0
+    left: 0
+    width: 100%
+    height: 100vh
+    background-color: #fff
+    z-index: 9
+    transform: translateY(-100%)
+    opacity: 0
+    visibility: hidden
+    pointer-events: none
+    overflow-y: auto
+    &.active
+        transform: translateY(0%)
+        opacity: 1
+        visibility: visible
+        pointer-events: all
+    .nav
+        display: none
+    .header
+        &__content
+            flex-direction: column
+            align-items: flex-start
+            height: 60%
+            .button:first-of-type
+                margin-left: 0
+            .button + .button
+                margin-left: 0
+                margin-top: 10px
+            .dropdown + .dropdown
+                margin-top: 10px
+                margin-bottom: 10px
+            .dropdown
+                padding: 0
+                &:first-of-type
+                    margin-left: 0
+
 .main
     flex-grow: 1
     margin-top: 120px
@@ -554,6 +593,7 @@ section
         box-shadow: 0 0 0 1px #9F9F9F
         border-radius: 4px
         cursor: pointer
+        box-sizing: border-box
         &_green
             box-shadow: 0 0 0 1px $main_green
             padding: 9px 35px 9px 12px
@@ -902,11 +942,12 @@ section
     &__list
         list-style-type: none
         display: flex
+        flex-wrap: wrap
     &__item
         display: inline-block
         position: relative
-        & + &
-            margin-left: 25px
+        margin-top: 5px
+        margin-right: 25px
         &:not(:last-child)
             &::before, &::after
                 content: ''
@@ -1169,6 +1210,7 @@ section
 .top
     &__item
         display: flex
+        width: 100%
         flex-direction: column
         border-radius: 8px
         box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.1)
@@ -1424,6 +1466,8 @@ section
         color: #828282
         margin-top: 10px
         display: inline-block
+        br
+            display: none
     &__body
         margin-top: 30px
         margin-bottom: 90px
@@ -1446,6 +1490,7 @@ section
         border-radius: 8px
         overflow: hidden
         cursor: pointer
+        height: 100%
         &_big
             grid-column: 1 / 7
         &:focus
@@ -1508,6 +1553,7 @@ section
     &__price
         display: flex
         flex-direction: column
+        margin-right: 10px
         &-price
             font-size: 36px
             line-height: 42px
@@ -1565,8 +1611,16 @@ section
         justify-content: space-between
         margin-bottom: 30px
     &__location
-        .map__text + .map__text
-            margin-left: 50px
+        align-items: center
+        justify-content: space-around
+        flex-wrap: wrap
+        display: flex
+        .map__text
+            margin-right: 50px
+            margin-top: 5px
+            white-space: nowrap
+            &:last-child
+                margin-right: 0
     &__text, &__text-light
         color: $main_black
         font-size: 16px
@@ -1622,6 +1676,7 @@ section
         border: 1px solid #979797
         border-top: none
         padding: 24px 48px
+        overflow-x: auto
     &__items
         margin: 0
         padding: 0
@@ -1633,6 +1688,7 @@ section
     list-style-type: none
     &__row
         display: grid
+        min-width: 770px
         align-items: center
         grid-template-columns: 380px repeat(2, 1fr) 50px
         width: 100%
