--- a/hata/sass/style.sass
+++ b/hata/sass/style.sass
@@ -936,9 +936,11 @@ section
 
 
 .breadcrumbs
-    padding-top: 25px
+    padding-top: 15px
     margin-bottom: 50px
     background-color: #fff
+    &_mt
+        margin-top: 25px
     &__list
         list-style-type: none
         display: flex
@@ -1041,6 +1043,29 @@ section
             pointer-events: all
     .tab__col + .tab__col
         margin-left: 0
+    &__row_hidden
+        height: 0
+        margin-top: 0 !important
+        overflow: hidden
+        transition: height .2s ease-in 0s
+        padding-left: 1px
+        padding-right: 1px
+        visibility: hidden
+        align-items: flex-start
+        justify-content: flex-start
+        justify-content: space-around
+        &.active
+            visibility: visible
+            margin-top: 40px !important
+            height: 280px
+            transition: height .2s ease-in 0s
+        .fromto
+            &__inputs
+                margin-top: 0
+                margin-bottom: 10px
+        .tab
+            &__row
+                margin-bottom: 10px
 
 .fromto
     & + &
@@ -1062,6 +1087,9 @@ section
             border-radius: 4px 0 0 4px
         &:last-child
             border-radius: 0px 4px 4px 0px
+        &:only-child
+            border-radius: 4px
+            max-width: 144px
         &:focus
             outline: none
 
@@ -1072,7 +1100,7 @@ section
     &__top
         padding-bottom: 40px
     &__head
-        margin: 20px 0px 0px
+        margin: 10px 0px 0px
     &__filter
         margin-left: 60px
         &-item
@@ -1140,6 +1168,7 @@ section
             padding: 8.5px 12px
             font-size: 16px
             user-select: none
+            white-space: nowrap
             svg
                 fill: $main_green
                 height: 16px
@@ -1201,7 +1230,7 @@ section
         &.active
             box-shadow: inset 0 0 0 2px $main_green
     &__wrap
-        margin-top: 40px
+        margin-top: 30px
         display: flex
         width: 100%
         justify-content: center
@@ -1230,11 +1259,12 @@ section
             font-size: 14px
             color: $main_black
             padding: 6px 10px
-            z-index: 5
+            z-index: 4
         &-price
             background-color: #FFFD5C
             left: 0
             bottom: 34px
+            padding: 4px 6px
         &-year
             background-color: #83F992
             left: 0
@@ -1243,7 +1273,7 @@ section
             color: #fff
             background-color: #EB376F
             font-weight: 400
-            padding: 10px 8px
+            padding: 7px 8px
             top: 5px
             right: 0
         .swiper
@@ -1265,7 +1295,7 @@ section
             object-fit: cover
     &__body
         background-color: #fff
-        padding: 20px 10px 60px
+        padding: 10px 10px 48px
         position: relative
         overflow: hidden
         height: 100%
@@ -1316,13 +1346,13 @@ section
             &__main
                 background-color: #EDF7EE
             &__data
-                border-left: none
+                border: none
             &__side
                 background-color: #8FC68E
                 & *
                     color: #fff
     &__slider
-        max-width: 280px
+        max-width: 275px
         width: 100%
         overflow: hidden
     &__img
@@ -1347,7 +1377,7 @@ section
         font-size: 28px
         display: inline-block
         &-text
-            font-size: 14px
+            font-size: 12px
             color: $main_black
             &__big
                 font-size: 16px
@@ -1365,7 +1395,7 @@ section
         display: flex
         align-items: center
         justify-content: space-between
-        margin-top: 10px
+        margin-top: 5px
         margin-bottom: 15px
         max-width: 305px
     &__info, &__data
@@ -1373,14 +1403,16 @@ section
         flex-direction: column
         justify-content: space-between
     &__data
-        padding: 0px 15px 0px 30px
-        margin: 25px 0px 15px
+        padding: 0px 15px 0px 24px
+        margin: 15px 0px 15px
         display: flex
         justify-content: initial
         border-left: 2px dashed #979797
     &__info
         height: auto
         flex-grow: 1
+        margin-top: 5px
+        margin-bottom: 14px
         &-item
             display: flex
             flex-direction: column
@@ -1388,7 +1420,7 @@ section
         display: inline-block
         position: relative
         color: #79828B
-        font-size: 14px
+        font-size: 12px
         vertical-align: middle
         svg
             vertical-align: middle
@@ -1597,7 +1629,7 @@ section
                 left: -8px
                 transform: translate(-100%, -50%)
         li + li
-            margin-top: 10px
+            margin-top: 11px
 
 .map
     &__title
@@ -1652,7 +1684,8 @@ section
             margin-top: 10px
 
 .results
-    padding-top: 80px
+    padding-top: 76px
+    margin-bottom: 30px
     &__top
         width: 100%
         justify-content: space-between
