--- a/hata/sass/style.sass
+++ b/hata/sass/style.sass
@@ -1021,7 +1021,7 @@ section
         box-shadow: 0 0 0 1px #9F9F9F
         & + &
             margin-left: 10px
-        &:hover
+        &:hover, &.active
             box-shadow: 0 0 0 1px $main_green
             background-color: $main_green
             color: #fff
@@ -1455,6 +1455,79 @@ section
             stroke: #CDD3D7
             transition-duration: 0s
             cursor: pointer
+
+.popup
+    display: flex
+    position: fixed
+    left: 0
+    top: 0
+    width: 100%
+    height: 100vh
+    background-color: rgba(0, 0, 0, .6)
+    z-index: 20
+    visibility: hidden
+    opacity: 0
+    pointer-events: none
+    align-items: center
+    justify-content: center
+    padding: 0px 10px
+    overflow-y: auto
+    &__head
+        display: flex
+        align-items: center
+        justify-content: space-between
+        width: 100%
+        margin-bottom: 20px
+        background-color: $main_light
+        padding: 20px 30px
+    &__close
+        display: inline-block
+        height: 40px
+        width: 40px
+        background-color: transparent
+        position: relative
+        cursor: pointer
+        &::before, &::after
+            content: ''
+            display: inline-block
+            height: 2px
+            width: 25px
+            top: 50%
+            left: 50%
+            transform: translate(-50%, -50%)
+            position: absolute
+            background-color: $main_black
+        &::before
+            transform: translate(-50%, -50%) rotate(-45deg)
+        &::after
+            transform: translate(-50%, -50%) rotate(45deg)
+        &:focus
+            outline: none
+    &__body
+        background-color: #fff
+        display: none
+        width: 100%
+        max-width: 1100px
+        border-radius: 4px
+        overflow: hidden
+        padding-bottom: 30px
+        &.active
+            display: block
+    &__list
+        list-style-type: none
+    &__link
+        display: inline-block
+        color: $main_black
+        padding: 3px 0px
+        &:hover
+            color: $main_green
+    &__content
+        padding: 10px 30px 0px
+        column-count: 5
+    &.active
+        visibility: visible
+        opacity: 1
+        pointer-events: all
 
 
 //
