--- a/hata/sass/media.sass
+++ b/hata/sass/media.sass
@@ -341,7 +341,7 @@ $main_grey: #636363
         display: inline-block
 
     .main
-        margin-top: 110px
+        padding-top: 110px
 
 @media screen and ( max-width: 680px )
     .tabs
@@ -510,7 +510,7 @@ $main_grey: #636363
             display: none
     
     .main
-        margin-top: 60px
+        padding-top: 60px
 
     .article
         &_big
