--- a/hata/sass/style.sass
+++ b/hata/sass/style.sass
@@ -428,7 +428,7 @@ section
 
 .main
     flex-grow: 1
-    margin-top: 120px
+    padding-top: 120px
 
 .hero
     background-color: #000000
@@ -1298,6 +1298,7 @@ section
         padding: 10px 10px 48px
         position: relative
         overflow: hidden
+        display: block
         height: 100%
     &__title
         font-size: 16px
@@ -1331,6 +1332,31 @@ section
             stroke: #CDD3D7
             transition-duration: 0s
             cursor: pointer
+    &__control
+        display: inline-block
+        top: 50%
+        height: 20px
+        width: 20px
+        border-radius: 50%
+        background-image: url(../img/slider_arrow.png)
+        background-color: transparent
+        background-size: contain
+        background-repeat: no-repeat
+        background-position: center
+        position: absolute
+        cursor: pointer
+        z-index: 3
+        opacity: .6
+        &:focus
+            outline: none
+        &:hover
+            opacity: .9
+        &_prev
+            left: 5px
+            transform: translate(0, -50%) rotate(0deg)
+        &_next
+            right: 5px
+            transform: translate(0, -50%) rotate(-180deg)
 
 .apartment
     background-color: #fff
@@ -1343,6 +1369,8 @@ section
         box-shadow: 0px 3px 18px rgba(0, 0, 0, 0.2)
     &_green
         .apartment
+            &__tip-img
+                background-image: url(../img/tip_white.png)
             &__main
                 background-color: #EDF7EE
             &__data
@@ -1355,6 +1383,7 @@ section
         max-width: 275px
         width: 100%
         overflow: hidden
+        position: relative
     &__img
         width: 100%
         height: 100%
@@ -1416,6 +1445,23 @@ section
         &-item
             display: flex
             flex-direction: column
+    &__tip
+        right: 10px
+        bottom: 10px
+        position: absolute
+        display: inline-block
+        cursor: pointer
+        background-color: transparent
+        &:focus
+            outline: none
+        &-img
+            height: 15px
+            width: 15px
+            display: inline-block
+            background-repeat: no-repeat
+            background-position: center
+            background-size: contain
+            background-image: url(../img/tip_green.png)
     &__text
         display: inline-block
         position: relative
@@ -1435,6 +1481,7 @@ section
         height: 100%
         width: 100%
         display: flex
+        position: relative
     &__like
         display: inline-block
         margin-top: 5px
